
 ** gumbelcdf

 ** gumbelfit (similar functionality to MATLAB's mle)

 ** gumbelinv

 ** gumbellike (similar functionality to MATLAB's negloglik and mlecov)

 ** gumbelpdf

 ** gumbelrnd

 ** hncdf

 ** hnfit (similar functionality to MATLAB's mle)

 ** hninv

 ** hnlike (similar functionality to MATLAB's negloglik and mlecov)

 ** hnpdf

 ** hnrnd

 ** invgcdf

 ** invginv

 ** invgpdf

 ** invgrnd

 ** isoutlier (fully Matlab compatible)

 ** loglcdf

 ** loglinv

 ** loglpdf

 ** loglrnd

 ** lognfit (fully Matlab compatible)

 ** lognlike (fully Matlab compatible)

 ** mad (fully Matlab compatible)

 ** normfit (fully Matlab compatible)

 ** poissfit (fully Matlab compatible, extra functionality)

 ** poisslike (similar functionality to MATLAB's negloglik)

 ** wblfit (fully Matlab compatible)

 ** wbllike (fully Matlab compatible)

 Improvements:
 =============

 ** bisacdf: supports "upper" option

 ** burrcdf: supports "upper" option

 ** cauchycdf: supports "upper" option

 ** cdf: update support for all univariate cumulative distribution functions

 ** gamfit: fixed MATLAB compatibility

 ** gamlike: fixed MATLAB compatibility

 ** icdf: update support for all univariate quantile functions

 ** laplacecdf: supports "upper" option

 ** logicdf: supports "upper" option

 ** mcnemar_test: updated functionality

 ** nakacdf: supports "upper" option

 ** pcacov: fixed MATLAB compatibility

 ** pdf: update support for all univariate probability density functions

 ** plsregress: fixed MATLAB compatibility

 ** random: update support for all univariate functions

 ** runstest: fixed MATLAB compatibility

 ** tabulate: fixed MATLAB compatibility

 ** tricdf: supports "upper" option

 ** trimmean: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** run_test (replaced by runstest)

 ** stdnormal_cdf (replaced by normcdf)

 ** stdnormal_inv (replaced by norminv)

 ** stdnormal_pdf (replaced by normpdf)

 ** stdnormal_rnd (replaced by normrnd)
