@@ -125,6 +125,8 @@ Distribution Fitting
  gumbellike
  hnfit
  hnlike
+ invgfit
+ invglike
  lognfit
  lognlike
  normfit
